--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "koa-router": "^7.4.0",
         "mongoose": "^5.4.20",
         "node-schedule": "^1.3.2",
+        "nodemon": "^1.19.1",
         "qrcode-terminal": "^0.12.0",
         "superagent": "^5.0.2",
         "wechaty": "^0.22.6"
