--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "start": "node wechaty/index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "author": "Leo_chen",
+    "author": "",
     "license": "MIT",
     "keywords": [
         "koa",
@@ -36,9 +36,11 @@
         "node-machine-id": "^1.1.12",
         "node-schedule": "^1.3.2",
         "nodemon": "^1.19.1",
+        "pm2": "^5.1.2",
         "qrcode-terminal": "^0.12.0",
         "superagent": "^5.0.2",
-        "wechaty": "^0.26.1"
+        "wechaty": "^0.63.3",
+        "wechaty-puppet-wechat": "^0.28.4"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
